--- a/stats/package.json
+++ b/stats/package.json
@@ -4,14 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start:build": "tsc -w",
-    "start:run": "node --watch build/index.js",
+    "start:run": "node --watch dist/index.js",
     "start": "concurrently npm:start:*"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/node": "^24.8.1",
     "concurrently": "^9.2.1"
   }
 }
